[package]
name = "greencurves"
version = "0.2.0"
edition = "2021"
description = "Generate statistics on Bezier paths"
license = "MIT OR Apache-2.0"
authors = ["Simon Cozens <simon@simon-cozens.org"]
repository = "https://github.com/simoncozens/greencurves"

[dependencies]
kurbo = "0.11"
itertools = "0.13"

[dev-dependencies]
approx = "0.3"
